<resources>
    <string name="app_name">WeekBrowser</string>
    <string name="select_action">Choose action</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="qs_changecol">Change page col.</string>
    <string name="qs_js">JS</string>
    <string name="qs_pc">PC version</string>
    <string name="qs_incognito">Incognito</string>
    <string name="qs_loadimg">Load images</string>
    <string name="qs_blad">Block ads</string>
    <string name="qs_bliframe">Block. \"sites in sites\"</string>
    <string name="qs_swipetoref">Swipe to refresh</string>
    <string name="qs_uisize">Interface size</string>
    <string name="qs_fontsize">General font size</string>
    <string name="qs_minfont">Minimal font size</string>
    <string name="copy_all_url">COPY ALL TABS URL</string>
    <string name="cr_multilink">CREATE MULTILINK</string>
    <string name="in_other_app">OPEN THIS PAGE IN OTHER APP</string>
    <string name="searchbar">Search/address</string>
    <string name="loading">Loading</string>
    <string name="sitesearch">Search at page</string>
    <string name="nointernet">(No Internet connection)</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="adblocked">This page are blocked with ad blocker.</string>
    <string name="colexcept">What do this forced with page theming?</string>
    <string name="change">Change</string>
    <string name="nochange">Not change</string>
    <string name="exdefault">Not define</string>
    <string name="jsexcept">What do this forced with page JS?</string>
    <string name="turnon">Turn on</string>
    <string name="turnoff">Turn off</string>
    <string name="bladexcept">What do this forced with page ads block?\nAt this session blocked</string>
    <string name="ads">ads</string>
    <string name="iframeexcept">What do this forced with \"sites on sites\" on this webpage?</string>
    <string name="swipeexcept">Do allow \"swipe to refresh\" in this page?</string>
    <string name="choosemode">Choose mode</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="overlay">Overlay other apps</string>
    <string name="general_settings">GENERAL SETTINGS</string>
    <string name="def_search">Default search engine</string>
    <string name="content_view">Content view</string>
    <string name="show_search_panel">Show recent search prompts panel</string>
    <string name="show_tools_panel">Show toolbar</string>
    <string name="tools_panel_top">Toolbar at top</string>
    <string name="search_panel_top">Search bar at top</string>
    <string name="hide_panels">Hide panels when scrolling down</string>
    <string name="show_zoom">Show zoom buttons</string>
    <string name="forbid_screen">Forbid screenshots in incognito mode</string>
    <string name="hide_content">Hide browser content in recent apps screen when incognito is on</string>
    <string name="mono_font">Use monospace font in textareas</string>
    <string name="open_scripts">EXTENSIONS</string>
    <string name="open_useragent">USERAGENTS</string>
    <string name="open_search_replace">SEARCH &amp; REPLACE IN URLS</string>
    <string name="open_exceptions">SITES EXCEPTIONS</string>
    <string name="buttons_size">Bar buttons size</string>
    <string name="cache_n_optimization">Cache settings and optimization</string>
    <string name="standard">Standard</string>
    <string name="cache_net">Cache else network</string>
    <string name="net_only">Network only</string>
    <string name="cache_only">Cache only (offline)</string>
    <string name="no_internet">Offline mode when no Internet connection</string>
    <string name="ram_limit">Random access memory usage limit: </string>
    <string name="theme">Design theme</string>
    <string name="white">White</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>
    <string name="high_contrast">High contrast</string>
    <string name="user_theme">User</string>
    <string name="open_skin_editor">SKIN EDITOR</string>
    <string name="loading_style">Loading indicator style</string>
    <string name="align_center">Fit to center</string>
    <string name="start_page">Starting page</string>
    <string name="auto_start_page">Automaticaly choose last visited page</string>
    <string name="bookmarks">BOOKMARKS</string>
    <string name="start_page_hint">Start page link</string>
    <string name="clean">Clean</string>
    <string name="at_exit">At exit</string>
    <string name="clear_search">CLEAR SEARCH HISTORY</string>
    <string name="open_history_clean">VISITED WEBPAGES HISTORY (YOU CAN CLEAN THIS THERE)</string>
    <string name="clear_cache">CLEAR CACHE</string>
    <string name="clear_cookie">CLEAR COOKIE</string>
    <string name="clear_autocomp">CLEAR AUTOCOMPLETE DATA</string>
    <string name="block_ad">Ads blocking</string>
    <string name="block_unwanted_sites">Block redirects to unwanted pages</string>
    <string name="iframe_button">Show buttons near \"sites in sites\" which can open this separately</string>
    <string name="skip_video">Try to skip videoads</string>
    <string name="skip_video_keywords">Keywords for skip videoads (supports regular expressions, write|words|through|pipes|without|extra|spaces):</string>
    <string name="skip_video_keywords_hint">Skip with|Remaining ad|Advertisement [0-9]</string>
    <string name="about">About application</string>
    <string name="about_dev">This product is licensed with \"The Unlicense\", accordingly, it is in the public domain\n\nunlicense.org\n\nHelp me please with English translation, you can write me to Telegram. I will be very happy if you send me some money (if you can send money to ukrainian PrivatBank).\n\nDeveloping:\nt.me/week_thor\n\nTranslations:\nUkrainian, russian, english:\nt.me/week_thor\n\nHelp with user agents collection:\ndeviceatlas.com\nwww.browserscan.net\nmyip.ms\nuser-agents.net\nIcons GUI:\nFont Awesome by Dave Gandy\nfontello.com\n\nHelp with writing code:\nchatgpt.com\nchat.deepseek.com\n\nMaybe beta-testers (I usually don\'t publish beta-versions because this app isn\'t very popular):\nt.me/bl00df0rd\nt.me/Felix_Argyle\nt.me/eulrzxcf9\nt.me/ant_onion_a\n\nPowered with Sketchware Pro\n4PDA theme about Sketchware:\n4pda.to/forum/index.php?showtopic=991617&amp;view=findpost&amp;p=96067036\n\nColors for skin editor color palette:\njbak2.ucoz.net/index/kody_cvetov/0-32\ncoolors.co\nmaterialui.conpanda.network\n\nAd block filters:\nhttps://github.com/prenagha/adblock/tree/master\nhttps://github.com/balupton/littlesnitch-filters\nhttps://github.com/FuccDucc/lost-AdBlocker-filters</string>
    <string name="copy">COPY</string>
    <string name="private_tg">GO TO PRIVATE CHAT WITH DEVELOPER (TELEGRAM)</string>
    <string name="channel_tg">GO TO TELEGRAM CHANNEL</string>
    <string name="privatcard">COPY PRIVATBANK CARD NUMBER</string>
    <string name="dev_settings">Developer settings</string>
    <string name="show_used_ram">Show technical info in main screen</string>
    <string name="force_crash">FORCE CRASH</string>
    <string name="hide_panel_hint">Щоб проявити панелі, вийдіть з браузера та зайдіть, найпростіший спосіб — натиснути кнопку (або здійснити жест) \"Недавні програми □\", та відкрити WeekBrowser</string>
    <string name="hide_content_hint">Працює не на всіх пристроях, якщо все-таки це потрібно, забороніть скріншоти</string>
    <string name="no_thanks">Ні, дякую</string>
    <string name="cache_hint">Режим \"Стандарт\" — двигун сам вирішить, звідки що завантажувати.\n\n\"Спочатку кеш, потім мережа\" може зекономити Ваш інтернет-трафік, але на деяких сайтах з динамічно оновлюваною інформацією може не оновлюватися інформація.\n\nАльтернативою є \"Швидша навігація між сайтами\". В цьому режимі сайти, що були запущені менше хвилини тому — запустяться швидко (спочатку кеш, потім мережа), інакше — як в режимі \"Стандарт\". Це найоптимальніший варіант.\n\n\"Лише мережа\" зекономить Вашу пам\'ять телефону (кеш не буде зберігатися), але буде більший інтернет-трафік.\n\n\"Лише кеш\" — це режим, у якій мережа зовсім не використовується, через що це найменш корисна опція.</string>
    <string name="ram_limit_hint">По стандарту стоїть 3/4 від загальної ОЗП.\n\nЯкщо у Вас вкладки часто пропадають з фонового режиму, збільште ліміт, якщо це можливо.nnЯкщо у Вас виникають зависання чи вильоти з повідомленням \"OutOfMemoryError\", спробуйте зменшити ліміт.</string>
    <string name="iframe_button_hint">Це дуже недооцінена кнопка, яка може дати можливість дивитися більше відео без реклами! Якщо Ви побачите цю []↗ кнопку біля відеоплеєра на сайті, рекомендую її натиснути ;)</string>
    <string name="openwith">Open with...</string>
    <string name="noopenwith">No available apps for open this website</string>
    <string name="typehere">Type here</string>
    <string name="bookmark_name">Bookmark name</string>
    <string name="shortcut_name">Shortcut name</string>
    <string name="link">Link</string>
    <string name="generallink">SIMPLE LINK</string>
    <string name="multilink">MULTILINK</string>
    <string name="name_color">Name color</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="refresh">REFRESH</string>
    <string name="text_button">TEXT</string>
    <string name="background_button">BACKGROUND</string>
    <string name="fontsize">Font size</string>
    <string name="fontweight">Boldness</string>
    <string name="italic">Italic</string>
    <string name="row_interval">Interval between rows</string>
    <string name="font">Font</string>
    <string name="text_register">Text case</string>
    <string name="all_big">ALL UPPERCASE</string>
    <string name="all_small">all lowercase</string>
    <string name="capitalize">Capitalize Every Word</string>
    <string name="text_align">Text align</string>
    <string name="textshadowx">Shadow: position X</string>
    <string name="textshadowy">Position Y</string>
    <string name="blur">Blur</string>
    <string name="color">Color</string>
    <string name="alpha">Opacity</string>
    <string name="textborder_size">Letter border: thickness</string>
    <string name="wordborder_size">Word border: thickness</string>
    <string name="borderstyle">Border style</string>
    <string name="filter_brightness">Filter: brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="sepia">Sepia</string>
    <string name="invert">Inversion</string>
    <string name="hue_rotate">Hue rotate</string>
    <string name="blend_mode">Blending mode</string>
    <string name="js_e">JS</string>
    <string name="blockad_e">ADS BLOCK</string>
    <string name="swipe_e">SWIPE REFRESH</string>
    <string name="redraw_e">SKIN CHANGER</string>
    <string name="frame_e">BLOCK. \"SITES IN SITES\"</string>
    <string name="changebtntext">TAP HERE TO CHANGE BUTTON TEXT COLOR</string>
    <string name="general_buttons">GENERAL BUTTONS</string>
    <string name="red_buttons">RED BUTTONS</string>
    <string name="background">BACKGROUND</string>
    <string name="text_and_other">TEXT AND OTHER</string>
    <string name="export_wesk">EXPORT</string>
    <string name="reverse">REVERSE</string>
    <string name="all_up">ALL_UP</string>
    <string name="all_down">ALL_DOWN</string>
    <string name="shuffle">SHUFFLE</string>
    <string name="gradient">Gradient</string>
    <string name="num_of_seg">Number of segments</string>
    <string name="sharpness">Sharpness</string>
    <string name="center_x">Center X</string>
    <string name="center_y">Center Y</string>
    <string name="radius">Radius</string>
    <string name="big_roundness">Roundness for big buttons</string>
    <string name="small_roundness">Roundness for small buttons</string>
    <string name="choose_style">Style (need to restart)</string>
</resources>