<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<ScrollView
		android:id="@+id/vscroll1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1">
		<LinearLayout
			android:id="@+id/linear1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="8dp"
			android:orientation="vertical">
			<com.a525team.weekbrowser.SkinTextView
				android:id="@+id/nam"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/shortcut_name"
				android:textSize="12sp"
				app:skinKey="add" />
			<com.a525team.weekbrowser.SkinEditText
				android:id="@+id/name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:textSize="12sp"
				android:hint="@string/typehere" />
			<com.a525team.weekbrowser.SkinTextView
				android:id="@+id/ur"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/link"
				android:textSize="12sp"
				app:skinKey="add" />
			<com.a525team.weekbrowser.SkinEditText
				android:id="@+id/url"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:textSize="12sp"
				android:hint="@string/typehere" />
			<LinearLayout
				android:id="@+id/linear2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<com.a525team.weekbrowser.SkinButton
					android:id="@+id/inslink"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:layout_marginRight="2dp"
					android:text="@string/generallink"
					android:textSize="12sp"
					android:layout_gravity="left"
					android:layout_weight="1" />
				<com.a525team.weekbrowser.SkinButton
					android:id="@+id/insmlink"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:layout_marginLeft="2dp"
					android:text="@string/multilink"
					android:textSize="12sp"
					android:layout_gravity="left"
					android:layout_weight="1" />
			</LinearLayout>
			<GridView
				android:id="@+id/gridview1"
				android:layout_width="match_parent"
				android:layout_height="600dp"
				android:layout_marginTop="4dp"
				android:padding="8dp"
				android:numColumns="5"
				android:stretchMode="columnWidth"
				tools:listitem="@layout/draws" />
		</LinearLayout>
	</ScrollView>
	<com.a525team.weekbrowser.SkinButton
		android:id="@+id/add"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:text="@string/add"
		android:textSize="12sp" />
</LinearLayout>
