<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/bg"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/linear5"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:id="@+id/prevbtn"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">
				<LinearLayout
					android:id="@+id/linear6"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<com.a525team.weekbrowser.SkinButton
						android:id="@+id/prev1"
						android:layout_width="38dp"
						android:layout_height="30dp"
						android:padding="8dp"
						android:text="P"
						android:textSize="12sp"
						app:skinKey="rbg"
						app:isSmall="true" />
					<com.a525team.weekbrowser.SkinButton
						android:id="@+id/prev3"
						android:layout_width="38dp"
						android:layout_height="30dp"
						android:padding="8dp"
						android:text="R"
						android:textSize="12sp"
						app:isSmall="true" />
					<com.a525team.weekbrowser.SkinButton
						android:id="@+id/prev4"
						android:layout_width="38dp"
						android:layout_height="30dp"
						android:padding="8dp"
						android:text="E"
						android:textSize="12sp"
						app:skinKey="rbg"
						app:isSmall="true" />
					<com.a525team.weekbrowser.SkinButton
						android:id="@+id/prev5"
						android:layout_width="38dp"
						android:layout_height="30dp"
						android:padding="8dp"
						android:text="V"
						android:textSize="12sp"
						app:isSmall="true" />
					<com.a525team.weekbrowser.SkinButton
						android:id="@+id/prev6"
						android:layout_width="38dp"
						android:layout_height="30dp"
						android:padding="8dp"
						android:text="I"
						android:textSize="12sp"
						app:isSmall="true" />
					<com.a525team.weekbrowser.SkinButton
						android:id="@+id/prev7"
						android:layout_width="38dp"
						android:layout_height="30dp"
						android:padding="8dp"
						android:text="E"
						android:textSize="12sp"
						app:skinKey="rbg"
						app:isSmall="true" />
					<com.a525team.weekbrowser.SkinButton
						android:id="@+id/prev8"
						android:layout_width="38dp"
						android:layout_height="30dp"
						android:padding="8dp"
						android:text="W"
						android:textSize="12sp"
						app:skinKey="rbg"
						app:isSmall="true" />
				</LinearLayout>
				<com.a525team.weekbrowser.SkinButton
					android:id="@+id/prev9"
					android:layout_width="38dp"
					android:layout_height="30dp"
					android:padding="8dp"
					android:text="R"
					android:textSize="12sp"
					app:isSmall="true" />
				<com.a525team.weekbrowser.SkinButton
					android:id="@+id/prev10"
					android:layout_width="38dp"
					android:layout_height="30dp"
					android:padding="8dp"
					android:text="E"
					android:textSize="12sp"
					app:skinKey="rbg"
					app:isSmall="true" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/prevcomp"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">
				<com.a525team.weekbrowser.SkinCheckBox
					android:id="@+id/prevcheck"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="CheckBox"
					android:textSize="12sp"
					android:checked="true" />
				<RadioGroup
					android:id="@+id/radiogroup1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					<com.a525team.weekbrowser.SkinRadioButton
						android:id="@+id/prevradio"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="RadioButton"
						android:textSize="12sp"
						android:checked="true" />
					<com.a525team.weekbrowser.SkinRadioButton
						android:id="@+id/prevradip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="RadioButton"
						android:textSize="12sp" />
				</RadioGroup>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear7"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<com.a525team.weekbrowser.SkinButton
					android:id="@+id/prev2"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:padding="8dp"
					android:text="@string/changebtntext"
					android:textSize="12sp"
					android:layout_weight="1" />
				<Button
					android:id="@+id/autogen"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:background="#FFFFFF"
					android:text="AUTO-GENERATE (BETA)"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="3" />
			</LinearLayout>
			<com.a525team.weekbrowser.SkinTextView
				android:id="@+id/styletitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/choose_style"
				android:textSize="12sp" />
			<com.a525team.weekbrowser.SkinTextView
				android:id="@+id/stylename"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Material Dark"
				android:textSize="12sp" />
			<com.a525team.weekbrowser.SkinSeekBar
				android:id="@+id/style"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:max="6" />
		</LinearLayout>
		<HorizontalScrollView
			android:id="@+id/hscroll1"
			android:layout_width="match_parent"
			android:layout_height="30dp">
			<LinearLayout
				android:id="@+id/linear1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:id="@+id/buttonpar"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#000000"
					android:text="@string/general_buttons"
					android:textSize="12sp"
					android:textColor="#FFFFFF" />
				<Button
					android:id="@+id/button3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#FFFFFF"
					android:text="@string/red_buttons"
					android:textSize="12sp"
					android:textColor="#000000" />
				<Button
					android:id="@+id/button6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#000000"
					android:text="@string/background"
					android:textSize="12sp"
					android:textColor="#FFFFFF" />
				<Button
					android:id="@+id/button4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#FFFFFF"
					android:text="@string/text_and_other"
					android:textSize="12sp"
					android:textColor="#000000" />
				<Button
					android:id="@+id/export"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#0D47A1"
					android:text="@string/export_wesk"
					android:textSize="12sp"
					android:textColor="#FFFFFF" />
			</LinearLayout>
		</HorizontalScrollView>
		<ScrollView
			android:id="@+id/vscroll1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1">
			<LinearLayout
				android:id="@+id/linear2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:orientation="vertical">
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/textview1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/gradient"
					android:textSize="12sp"
					android:textColor="#000000" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/gradientind"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:text="Up to down linear"
					android:textSize="18sp"
					android:textStyle="bold|italic"
					app:skinKey="add" />
				<com.a525team.weekbrowser.SkinSeekBar
					android:id="@+id/grad"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:max="12" />
				<LinearLayout
					android:id="@+id/linear8"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<com.a525team.weekbrowser.SkinTextView
						android:id="@+id/textview2"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:text="@string/num_of_seg"
						android:textSize="12sp"
						android:layout_weight="1" />
					<com.a525team.weekbrowser.SkinButton
						android:id="@+id/button9"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:text="✨"
						android:textSize="12sp"
						app:skinKey="rbg" />
				</LinearLayout>
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/segmentsind"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:text="6"
					android:textSize="18sp"
					android:textStyle="bold|italic"
					app:skinKey="add" />
				<com.a525team.weekbrowser.SkinSeekBar
					android:id="@+id/segm"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:max="50" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/textview9"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/sharpness"
					android:textSize="12sp" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/sharpnessind"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:text="64"
					android:textSize="18sp"
					android:textStyle="bold|italic"
					app:skinKey="add" />
				<com.a525team.weekbrowser.SkinSeekBar
					android:id="@+id/sharp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:max="8" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/textview3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/radius"
					android:textSize="12sp" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/radiusind"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:text="0.8"
					android:textSize="18sp"
					android:textStyle="bold|italic"
					app:skinKey="add" />
				<com.a525team.weekbrowser.SkinSeekBar
					android:id="@+id/rad"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/textview4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/center_x"
					android:textSize="12sp" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/centerxind"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:text="0"
					android:textSize="18sp"
					android:textStyle="bold|italic"
					app:skinKey="add" />
				<com.a525team.weekbrowser.SkinSeekBar
					android:id="@+id/x"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/textview5"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/center_y"
					android:textSize="12sp" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/centeryind"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:text="0"
					android:textSize="18sp"
					android:textStyle="bold|italic"
					app:skinKey="add" />
				<com.a525team.weekbrowser.SkinSeekBar
					android:id="@+id/y"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/textview6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/big_roundness"
					android:textSize="12sp" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/bigroundind"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:text="12"
					android:textSize="18sp"
					android:textStyle="bold|italic"
					app:skinKey="add" />
				<com.a525team.weekbrowser.SkinSeekBar
					android:id="@+id/bb"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:max="30" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/textview7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/small_roundness"
					android:textSize="12sp" />
				<com.a525team.weekbrowser.SkinTextView
					android:id="@+id/smallroundind"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:text="6"
					android:textSize="18sp"
					android:textStyle="bold|italic"
					app:skinKey="add" />
				<com.a525team.weekbrowser.SkinSeekBar
					android:id="@+id/sb"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:max="30" />
			</LinearLayout>
		</ScrollView>
		<GridView
			android:id="@+id/gridcol"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="8dp"
			android:layout_weight="1"
			android:numColumns="2"
			android:stretchMode="columnWidth"
			tools:listitem="@layout/colorss" />
		<HorizontalScrollView
			android:id="@+id/hscroll2"
			android:layout_width="match_parent"
			android:layout_height="30dp">
			<LinearLayout
				android:id="@+id/linear4"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="horizontal">
				<Button
					android:id="@+id/button7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#000000"
					android:text="@string/add"
					android:textSize="12sp"
					android:textColor="#FFFFFF" />
				<Button
					android:id="@+id/button8"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#FFFFFF"
					android:text="@string/reverse"
					android:textSize="12sp"
					android:textColor="#000000" />
				<Button
					android:id="@+id/allup"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#000000"
					android:text="@string/all_up"
					android:textSize="12sp"
					android:textColor="#FFFFFF" />
				<Button
					android:id="@+id/alldown"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#FFFFFF"
					android:text="@string/all_down"
					android:textSize="12sp"
					android:textColor="#000000" />
				<Button
					android:id="@+id/shuffle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#000000"
					android:text="@string/shuffle"
					android:textSize="12sp"
					android:textColor="#FFFFFF" />
			</LinearLayout>
		</HorizontalScrollView>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/linear3"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_weight="1" />
</LinearLayout>
